# git-ai

./: .gitignore  CHANGELOG.md  README.md  generate_commit_msg.py  generate_pr_description.py  pyproject.toml  test_bedrock.py  test_generate_commit_msg.py
.github/workflows/: semantic-release.yaml
src/git_ai/: __init__.py  generate_commit_msg.py  generate_pr_description.py
tests/: test_generate_commit_msg.py  test_generate_pr_description.py  test_generate_pr_description_integration.py
