[project]
name = "git-ai"
version = "0.1.0"
description = "A Python project using uv"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff==0.3.0", "pytest==8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
