[project]
name = "git-ai"
version = "0.0.0"
description = "Miscellaneous scripts that use AI to do useful stuff with git history"
requires-python = ">=3.11"
dependencies = [
    "instructor[bedrock]",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.1.1",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-mock", "python-semantic-release>=9.21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
